--- a/cykelfest.csproj
+++ b/cykelfest.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RootNamespace>cykelfest_web</RootNamespace>
+    <UseAppHost>false</UseAppHost>
   </PropertyGroup>
 
 
